Neue Accordion-Komponente hinzugefügt

--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "@angular-devkit/build-angular": "^18.2.10",
     "@angular/cli": "^18.2.10",
     "@angular/compiler-cli": "^18.2.0",
+    "@babel/preset-env": "^7.26.0",
     "@chromatic-com/storybook": "^1.9.0",
+    "@mdx-js/react": "^3.1.0",
+    "@storybook/addon-actions": "^8.3.6",
+    "@storybook/addon-controls": "^8.3.6",
     "@storybook/addon-docs": "^8.3.6",
     "@storybook/addon-essentials": "^8.3.6",
     "@storybook/addon-interactions": "^8.3.6",
